# axl

./: .mt-attrs  AUTHORS  ChangeLog  Doxyfile  INSTALL  Makefile.in  NEWS  README  STATUS  TODO  aclocal.m4  axl.kdevelop.filelist  axl.kdevses  config.h.in  configure.in  makeenv.in  makrules.in  uconfig.h
common/: dlx.h  sbtree.h  sbuffer.h  sgetopt.c  sgetopt.h  slist.h  smap.h  sstack.h  sstr.h  xlmodule.def  zpio_i.h  ztools_i.h
doc/: Makefile.in  axl.dsl  axldoc.css  axldoc.sgml  docinfo.sgml  docmake.sh.in  old_axl_api_ref.sgml  part1.sgml  part2.sgml  part3.sgml  part4.sgml  style-html-nochunks.xsl  style-html.xsl  style-htmlhelp.xsl  style-xhtml-nochunks.xsl  style-xhtml.xsl  style.css
doc/html/: axldoc.css
doc/man/: .cvsignore
doc/src/: api_obj.txt  api_val.txt  api_vm.txt
doc/static/: docpl.htm
include/axl/: axl.h  xlcore.h  xlmap.h  xlstr.h
misc/: bkupdchangelog  cfg_update.sh  makelinks
modules/: Makefile.in  allegro.c  bench.c  cgi.c  cgi.h  gd.c  mysql.c  postgres.c  readline.c  sqlite.c  unix.c
modules/axlinc/: allegro.xl  bench.xl  cgi.xl  cgi_tools.xl  gd.xl  mysql.xl  postgres.xl  unix.xl
modules/bench_files/: testtime.c  testtime.h
modules/stagpar/: Makefile.in  lextag.c  lextag.d  lextag.l  stagpar.c  stagpar.d  xmldump.c
modules/template/: dbms.c  res.c  simple.c
modules/wxaxl/: module.c  wxaxl.cpp
sample/matrix/: matrix.xl
sample/postgres/: pgquery
sample/stdtest/: time01
src/: Makefile.in
src/axl/: Makefile.in  axl.c  axl_config.in  axl_createmod.in
src/axl/res/: axl_win.rc  resource.h
src/axl/skel/: Makefile.in  mod.c  mod.xl
src/libxl/: Makefile.in  arch.h  axl_i.c  axl_i.h  builtin.c  code.c  codegen.c  codegen.h  context.c  except.c  frame.c  grammar.c  grammar.h  grammar.y  lex.c  lex.h  lexerr.c  lexfunc.c  lexfunc.h  libxl.def  objarray.c  object.c  objenv.c  objres.c  parse.h  proc.c  proc.h  symbol.c  symtab.c  tools.h  treegen.c  treegen.h  valmeth.c  valoper.c  value.c  vm.c  vm.h  xl.c  xlasm.c  xldebug.c  (+5 more)
src/stdaxl/: Makefile.in  decl.h  dump.c  io.c  mod.c  string.c  time.c
src/stdaxl/axlinc/: sort.xl  stddump  stdio  stdstr  stdtime
src/stdaxl/axlinc/axl/: dump  io  string  time
tests/: Makefile.in  all_featrure.xl  array.xl  matrix.xl  return_code.xl  test_oper.xl  test_template.xl
tests/lib/: Makefile.in  chconv1.c
